--- a/index.html
+++ b/index.html
@@ -58,7 +58,14 @@
             background-color: #45a049;
         }
     </style>
-    <!-- TrackDesk tracking script would go here -->
+    <!-- Trackdesk tracker begin -->
+    <script async src="//cdn.trackdesk.com/tracking.js"></script>
+    <script>
+        (function (t, d, k) { (t[k] = t[k] || []).push(d); t[d] = t[d] || t[k].f || function () { (t[d].q = t[d].q || []).push(arguments) } })(window, "trackdesk", "TrackdeskObject");
+
+        trackdesk("neenopal", "click");
+    </script>
+    <!-- Trackdesk tracker end -->
     <script>
         // Function to get URL parameters
         function getUrlParam(param) {
