--- a/confirmation.html
+++ b/confirmation.html
@@ -110,6 +110,7 @@
             sendConversionToTrackDesk();
         });
     </script>
+    <script type="module" src="https://assets.sandbox.cello.so/attribution/latest/cello-attribution.js" async></script>
 </head>
 
 <body>
