--- a/payment.html
+++ b/payment.html
@@ -142,6 +142,7 @@
             document.getElementById('customer-email').textContent = getUrlParam('email');
         });
     </script>
+    <script type="module" src="https://assets.sandbox.cello.so/attribution/latest/cello-attribution.js" async></script>
 </head>
 
 <body>
