--- a/signup.html
+++ b/signup.html
@@ -66,6 +66,7 @@
     </style>
     <!-- Trackdesk tracker begin -->
     <script async src="//cdn.trackdesk.com/tracking.js"></script>
+    <script type="module" src="https://assets.sandbox.cello.so/attribution/latest/cello-attribution.js" async></script>
     <script>
         (function (t, d, k) { (t[k] = t[k] || []).push(d); t[d] = t[d] || t[k].f || function () { (t[d].q = t[d].q || []).push(arguments) } })(window, "trackdesk", "TrackdeskObject");
 
